; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/unbound/respip/extr_respip.c_resp_addr_get_action.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/unbound/respip/extr_respip.c_resp_addr_get_action.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.resp_addr = type { i32 }

@respip_none = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @resp_addr_get_action(%struct.resp_addr* %0) #0 {
  %2 = alloca %struct.resp_addr*, align 8
  store %struct.resp_addr* %0, %struct.resp_addr** %2, align 8
  %3 = load %struct.resp_addr*, %struct.resp_addr** %2, align 8
  %4 = icmp ne %struct.resp_addr* %3, null
  br i1 %4, label %5, label %9

5:                                                ; preds = %1
  %6 = load %struct.resp_addr*, %struct.resp_addr** %2, align 8
  %7 = getelementptr inbounds %struct.resp_addr, %struct.resp_addr* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  br label %11

9:                                                ; preds = %1
  %10 = load i32, i32* @respip_none, align 4
  br label %11

11:                                               ; preds = %9, %5
  %12 = phi i32 [ %8, %5 ], [ %10, %9 ]
  ret i32 %12
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
